:encoding=UTF-8:

jEdit Console Plugin Changelog
$Date$
    Version 5.1.4  Requires jEdit 5.0, Java 1.6, ErrorList 2.1, CommonControls 1.7, and ProjectViewer 3.5 (optional).
      [Alan Ezust]
        New Project option: run commands from different directory (shadow build/run).
        Fixed #1721 and #1788. Windows commands work with () or <> again.

    Version 5.1.3 Requires jEdit 5.0, Java 1.6, ErrorList 2.1, and ProjectViewer 3.5 (optional).
      [Alan Ezust]
        Use 'patch' edit mode for BufferOutput buffers of commands with 'diff' or 'patch' in them.   

    Version 5.1.2 Requires jEdit 5.0, Java 1.6, ErrorList 2.1, and ProjectViewer 3.5 (optional).
      [Alan Ezust]
        New Console System Shell option: chdir events: Follow textarea
        NPE fixed in ErrorsOptionPane.
        Instead of VFSNodeSelected messages, SshConsole always gets textArea buffer chdir messages.
        Re-added "change to PV selected node" action.
        Bugfix in "change to PV root dir" and corresponding option in ProjectCommandOptionPane
        Removed an old memory leak in Console that prevented it from reloading cleanly.
      [Artem Bryantsev]
        Fix #3613991: Merge Stdout + Stderr on Windows duplicates output

    Version 5.1.1 Requires jEdit 5.0, Java 1.6, ErrorList 2.1, and ProjectViewer 3.5 (optional).
      [Alan Ezust]
        #3589470 Revisited: Brought back old "generic" error pattern, and added gcc pattern.
        Fix #3605191: Exception after node selected on windows.
      [Artem Bryantsev]
        Remade ANSI escape code parser's options: migration from values based on String to ones based on int.

    Version 5.1 Requires jEdit 5.0, Java 1.6, ErrorList 2.1, and ProjectViewer 3.5 (optional).
      [Artem Bryantsev]
        FR #3472822 - Console + Task Monitor
        Long-term processes (commands run from System shell) are implemented as Tasks.
        Those marked with '&' are background processes, those marked with '#' have a